--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
 
 
         <!-- Call to Action Start -->
-        <div class="container-xxl py-5">
+        <div class="container-xxl py-5" id="pasafi">
             <div class="container">
                 <div class="bg-light rounded p-3">
                     <div class="bg-white rounded p-4" style="border: 1px dashed rgba(0, 185, 142, .3)">
@@ -112,7 +112,7 @@
         <!-- Call to Action End -->
 
          <!-- Call to Action Start -->
-         <div class="container-xxl py-5">
+         <div class="container-xxl py-5" id="mwireri">
             <div class="container">
                 <div class="bg-light rounded p-3">
                     <div class="bg-white rounded p-4" style="border: 1px dashed rgba(0, 185, 142, .3)">
@@ -138,7 +138,7 @@
         </div>
         <!-- Call to Action End -->
             <!-- Call to Action Start -->
-            <div class="container-xxl py-5">
+            <div class="container-xxl py-5" id="ardhi">
                 <div class="container">
                     <div class="bg-light rounded p-3">
                         <div class="bg-white rounded p-4" style="border: 1px dashed rgba(0, 185, 142, .3)">
