--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
 
         <!-- Property List Start -->
-        <div class="container-xxl py-5">
+        <div class="container-xxl py-5" >
             <div class="container">
                 <div class="row g-0 gx-5 align-items-end">
                     <div class="col-lg-6">
@@ -124,10 +124,10 @@
                 <div class="tab-content">
                     <div id="tab-1" class="tab-pane fade show p-0 active">
                         <div class="row g-4">
-                            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s" href="about.html#pasafi">
                                 <div class="property-item rounded overflow-hidden">
                                     <div class="position-relative overflow-hidden">
-                                        <a href=""><img class="img-fluid" src="img/gakomba.jpeg" alt=""></a>
+                                        <a href="about.html#pasafi"><img class="img-fluid" src="img/gakomba.jpeg" alt=""></a>
                                         <div class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">Site Visit Day</div>
                                         
                                     </div>
@@ -143,10 +143,10 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s" href="about.html#pasafi">
                                 <div class="property-item rounded overflow-hidden">
                                     <div class="position-relative overflow-hidden">
-                                        <a href=""><img class="img-fluid" src="img/blessed.jpeg" alt=""></a>
+                                        <a href="about.html#mwireri"><img class="img-fluid" src="img/blessed.jpeg" alt=""></a>
                                         <div class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">Site Visit Day</div>
                                     </div>
                                     <div class="p-4 pb-0">
@@ -162,10 +162,10 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s" href="about.html#ardhi">
                                 <div class="property-item rounded overflow-hidden"> 
                                     <div class="position-relative overflow-hidden">
-                                        <a href=""><img class="img-fluid" src="img/ardhi1.jpeg" alt=""></a>
+                                        <a href="about.html#ardhi"><img class="img-fluid" src="img/ardhi1.jpeg" alt=""></a>
                                         <div class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">Deposit 200k</div>
                                         <div class="bg-white rounded-top text-primary position-absolute start-0 bottom-0 mx-4 pt-1 px-3">pay Ksh 30,000 Monthly</div>
                                     </div>
